--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,9 @@
-
+/* 글로벌 css 파일 */
+@font-face {
+    font-family: "AppleSDGothicNeoR";
+    src: url(./fonts/AppleSDGothicNeoR.ttf) format("truetype");
+  }
+  
 html {
     --primary-color: #df7861;
     --secondary-color: #ecb390;
