태그 선택 효과 추가 + 다크모드 버튼 수정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,10 @@ button.category-tag:active {
     background-color: var(--secondary-color);
     color: var(--fourth-color);
 }
+button.category-tag.active {
+    background-color: var(--secondary-color);
+    color: var(--fourth-color);
+}
 blockquote {
     border-left: 0.32813rem solid var(--primary-color);
     color: inherit;
