--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,7 @@ body a:hover {
     border-radius: 5rem;
     padding: 4px;
     font-size: 12px;
+    margin-right: 4px;
 }
 .navigation-link {
     padding: 8px 16px;
