--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,6 +52,8 @@ a:hover {
 
 code[class*="language-"], pre[class*="language-"] {
     border-radius: 8px;
+    font-size: 0.9rem;
+    word-break: break-all;
 }
 .title {
     font-family: 'DungGeunMo';
@@ -70,6 +72,13 @@ code[class*="language-"], pre[class*="language-"] {
     padding: 4px;
     font-size: 12px;
     margin-right: 4px;
+}
+.navigation-link-wrapper {
+    padding: 4px 0px;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .navigation-link {
     padding: 8px 16px;
